# DCK

./: .env.example  .gitignore  README.md  alembic.ini  create_migration.py  deploy_checklist.py  init_db.py  logging.conf.json  main.py  pyproject.toml  pytest.ini  railway_start.sh  requirements-dev.txt  requirements.txt  test_api.sh
alembic/: env.py
alembic/versions/: 42b8cd044c73_initial_migration_create_all_tables.py  e407330d4889_adiciona_novas_tabelas.py  fb23fd08740a_estrutura_inicial.py
data/: estoque.csv
src/: config.py  main.py
src/api/: app.py  exception_handlers.py
src/api/middleware/: __init__.py  auth_middleware.py
src/api/routes/: __init__.py  auth.py  clientes.py  estoque.py  produtos.py  vendas.py
src/api/schemas/: __init__.py  auth_schema.py  cliente_schema.py  estoque_schema.py  produto_schema.py  venda_schema.py
src/controllers/: __init__.py  auth_controller.py  carrinho_controller.py  cliente_controller.py  estoque_controller.py  produto_controller.py  venda_controller.py
src/database/: __init__.py  connection.py  models.py  session.py
src/logs/: filters.py  formatters.py  handlers.py
src/models/: cliente.py  produto.py  usuario.py  vendas.py
src/reports/: dashboard.py
src/security/: cripto.py
src/services/security/: __init__.py  cripto.py  jwt_handler.py  password_handler.py
src/utils/: __init__.py  adm.py  armazenamento.py  file_helpers.py  validators.py
tests/test_controller/: conftest.py  test_cliente_controller.py  test_estoque_controller.py  test_produto_controller.py  test_venda_controller.py
tests/test_integration/: conftest.py  test_auth_flow.py  test_cliente_flow.py  test_fluxo_completo.py  test_produto_flow.py  test_venda_flow.py  teste_estoque_flow.py
tests/test_model/: conftest.py  test_cliente.py  test_produto.py  test_venda.py
utils/: logger.py  logging.json
utils/logkit/: cli.py  config_logging.py  filters.py  formatters.py  handlers.py  settings.py
(+6 files in other folders)
